--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "unused-files-webpack-plugin": "^3.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^3.8.1",
-    "yargs": "^4.3.1"
+    "yargs": "^4.3.1",
+    "cypress": "^5.0.0"
   },
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
@@ -122,7 +123,10 @@
     "watch": "NODE_ENV=\"deploy\" webpack --progress --colors --watch --watch-poll --cache=false",
     "test": "npm run lint && jest --coverage --maxWorkers=4",
     "test:debug": "karma start",
-    "lint": "node_modules/.bin/eslint . --ext .js,.jsx"
+    "lint": "node_modules/.bin/eslint . --ext .js,.jsx",
+    "cypress:open": "cypress open",
+    "cy:run": "cypress run",
+    "test-cypress": "start-server-and-test start http://localhost:8080/ cy:run"
   },
   "keywords": [
     "OpenMRS",
